# poise-bot-template

./: .env.example  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: main.rs
src/commands/: mod.rs
src/commands/misc/: info.rs  mod.rs
src/handlers/: error.rs  mod.rs  setup.rs
src/handlers/event/: mod.rs  ready.rs
